[project]
name = "cvmplot"
version = "0.1.0"
description = "SZQ lab data plot function"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = "MIT"
authors = [{ name = "Qingpo Cui", email = "cqp@cau.edu.cn" }]
keywords = ["tnseq", "dendrogram", "phylogram", "cgMLST", "wgMLST", "plot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "biopython>=1.87",
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pygenomeviz>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/hbucqp/cvmplot"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cvmplot*"]

[tool.setuptools.package-data]
cvmplot = ["*"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
